# waves

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  idft.c  idft.h  main.c
